--- a/src/main/resources/templates/member/myInfo.html
+++ b/src/main/resources/templates/member/myInfo.html
@@ -56,7 +56,7 @@
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg"
                         onclick="location.href='editForm.html'"
-                        th:onclick="|location.href='@{/chanMarket/itemList/myInfo/edit}'|" type="button">수정</button>
+                        th:onclick="|location.href='@{/chanMarket/myInfo/edit}'|" type="button">수정</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
