--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -27,7 +27,7 @@
         <div class="col">
             <button class="btn btn-primary float-end"
                     onclick="location.href='myInfo.html'"
-                    th:onclick="|location.href='@{/chanMarket/itemList/myInfo}'|"
+                    th:onclick="|location.href='@{/chanMarket/myInfo}'|"
                     type="button">내 정보</button>
         </div>
     </div>
