--- a/src/main/resources/templates/item/addForm.html
+++ b/src/main/resources/templates/item/addForm.html
@@ -18,8 +18,8 @@
     <h4 class="mb-3">상품 입력</h4>
     <form action="itemInfo.html" th:action method="post">
         <div>
-            <label for="itemName">등록한 이메일</label>
-            <input type="text" id="host" name="host" th:value="${email}" class="form-control"
+            <label>등록한 이메일</label>
+            <input type="text" id="email" name="email" th:value="${email}" class="form-control"
                    readonly>
         </div>
         <div>
