--- a/src/main/resources/templates/item/itemInfo.html
+++ b/src/main/resources/templates/item/itemInfo.html
@@ -45,8 +45,9 @@
         </div>
 
         <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" type="submit">상품 삭제
-            </button>
+            <button class="w-100 btn btn-primary btn-lg"
+                    onclick="location.href='editForm.html'"
+                    th:onclick="|location.href='@{/chanMarket/itemList/{itemId}/delete(itemId=${item.id})}'|" type="button">상품 삭제</button>
         </div>
 
         <div class="col">
