--- a/src/main/resources/templates/item/itemInfo.html
+++ b/src/main/resources/templates/item/itemInfo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <link href="../css/bootstrap.min.css"
@@ -16,7 +16,7 @@
         <h2>상품 상세</h2>
     </div>
     <!-- 추가 -->
-    <form action="itemInfo.html" th:action method="post">
+    <form action="itemInfo.html" th:action method="get">
     <div>
         <label for="email">판매자</label>
         <input type="text" id="email" name="email" class="form-control"
@@ -64,7 +64,26 @@
                     type="button">목록으로</button>
         </div>
     </div>
-</div> <!-- /container -->
 </div>
+    </form>
+</div>
+<br>
+<br>
+<br>
+<br>
+<form action="itemInfo.html" th:action method="post">
+    <div>
+        <label for="text">댓글</label>
+        <input type="text" id="text" name="text" class="form-control"
+               placeholder="댓글을 입력하세요">
+            <button class="w-100 btn btn-primary btn-lg" type="submit">
+                등록</button>
+    </div>
+</form>
+<br>
+
+
+
+
 </body>
 </html>
