--- a/src/main/resources/templates/member/myInfo.html
+++ b/src/main/resources/templates/member/myInfo.html
@@ -9,7 +9,7 @@
     <div class="py-5 text-center">
         <h2>내 정보</h2>
     </div>
-    <form action="myInfo.html" th:action method="post">
+    <form action="myInfo.html" th:action method="get">
         <div>
             <label for="name">이름</label>
             <input type="text" id="name" name="name" class="form-control" value="사람"
@@ -51,7 +51,8 @@
             </tbody>
         </table>
 
-<!--
+        <br>
+
         <table class ="tb_col">
             찜 목록
             <thead>
@@ -61,13 +62,13 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="basket: ${basket}">
+            <tr th:each="basket: ${basketItem}">
                 <td><a th:href="@{|/chanMarket/itemList/${basket.id}|}" th:text="${basket.itemName}"></td>
                 <td th:text="${basket.price}"></td>
             </tr>
             </tbody>
         </table>
--->
+
 
         <hr class="my-4">
         <div class="row">
