--- a/src/main/resources/templates/item/deleteForm.html
+++ b/src/main/resources/templates/item/deleteForm.html
@@ -16,7 +16,7 @@
         <h2>상품 상세</h2>
     </div>
     <!-- 추가 -->
-    <form action="itemInfo.html" th:action method="post">
+    <form th:action="@{'/chanMarket/itemList/' + ${item.id}}" th:method="delete">
         <div>
             <label for="email">판매자</label>
             <input type="text" id="email" name="email" class="form-control"
@@ -40,7 +40,7 @@
             <div class="row">
                 정말 상품을 삭제 하실건가요?
                 <div class="col">
-                    <button class="w-100 btn btn-primary btn-lg" type="submit">예
+                    <button class="w-100 btn btn-primary btn-lg" type="submit" value="Delete">예
                     </button>
                 </div>
 
