--- a/src/main/resources/templates/item/editForm.html
+++ b/src/main/resources/templates/item/editForm.html
@@ -15,7 +15,7 @@
     <div class="py-5 text-center">
         <h2>상품 수정 폼</h2>
     </div>
-    <form action="itemInfo.html" th:action method="post">
+    <form th:action="@{'/chanMarket/itemList/' + ${item.id}}" th:method="put">
         <div>
             <label for="email">판매자</label>
             <input type="text" id="email" name="email" class="form-control" value="1"
@@ -39,7 +39,7 @@
         <hr class="my-4">
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">저장
+                <button class="w-100 btn btn-primary btn-lg" type="submit" value="Update">저장
                 </button>
             </div>
             <div class="col">
