--- a/src/main/resources/templates/item/itemInfo.html
+++ b/src/main/resources/templates/item/itemInfo.html
@@ -16,7 +16,7 @@
         <h2>상품 상세</h2>
     </div>
     <!-- 추가 -->
-    <form action="itemInfo.html" th:action method="get">
+    <form>
     <div>
         <label for="email">판매자</label>
         <input type="text" id="email" name="email" class="form-control"
