--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link href="../css/bootstrap.min.css"
-          th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="../../static/market/css/bootstrap.min.css"
+          th:href="@{/market/css/bootstrap.min.css}" rel="stylesheet">
     <!-- href="value1" 을 th:href="value2" 의 값으로 변경한다.
      HTML을 그대로 볼 때는 href 속성이 사용되고,
      뷰 템플릿을 거치면 th:href 의 값이 href 로 대체되면서 동적으로 변경할 수 있다. -->
