--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -21,8 +21,8 @@
                     type="button">상품 등록</button>
         </div>
     </div>
-
     </div>
+
     <div class="row">
         <div class="col">
             <button class="btn btn-primary float-end"
@@ -32,6 +32,7 @@
         </div>
     </div>
 
+<form th:action="@{'/chanMarket/itemList'}" th:method="get">
     <hr class="my-4">
     <div>
         <table class="table">
@@ -44,7 +45,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="item : ${itemList}">
+            <tr th:each="item : ${items}">
                 <td><a href="item.html" th:href="@{/chanMarket/itemList/{itemId}
                                 (itemId=${item.id})}" th:text="${item.id}"></a></td>
                 <td><a href="item.html" th:href="@{|/chanMarket/itemList/${item.id}|}"
@@ -55,6 +56,7 @@
             </tbody>
         </table>
     </div>
-</div> <!-- /container -->
+</form>
+
 </body>
 </html>
