--- a/src/main/resources/templates/member/myInfo.html
+++ b/src/main/resources/templates/member/myInfo.html
@@ -38,15 +38,11 @@
             <thead>
             <tr>
                 <th>itemName</th>
-                <th>price</th>
-                <th>itemInformation</th>
             </tr>
             </thead>
             <tbody>
-                <tr th:each="item : ${myInfo.getItems()}">
-                    <td><a th:href="@{|/chanMarket/itemList/${item.id}|}" th:text="${item.itemName}"></a></td>
-                    <td th:text="${item.price}"></td>
-                    <td th:text="${item.itemInformation}"></td>
+                <tr th:each="board : ${myInfo.getBoardList()}">
+                    <td><a th:href="@{|/chanMarket/board/${board.id}|}" th:text="${board.getItem().getItemName()}"></a></td>
             </tr>
             </tbody>
         </table>
@@ -67,8 +63,8 @@
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='itemList.html'"
-                        th:onclick="|location.href='@{/chanMarket/itemList}'|"
+                        onclick="location.href='boardList.html'"
+                        th:onclick="|location.href='@{/chanMarket/board}'|"
                         type="button">뒤로가기</button>
             </div>
         </div>
