--- a/src/main/resources/templates/item/editForm.html
+++ b/src/main/resources/templates/item/editForm.html
@@ -15,11 +15,11 @@
     <div class="py-5 text-center">
         <h2>상품 수정 폼</h2>
     </div>
-    <form th:action="@{'/chanMarket/itemList/' + ${item.id}}" th:method="put">
+    <form th:action="@{'/chanMarket/item/' + ${item.id}}" th:method="put">
         <div>
             <label for="email">판매자</label>
             <input type="text" id="email" name="email" class="form-control" value="1"
-                   th:value="${item.member.getEmail()}" readonly>
+                   th:value="${item.board.member.email}" readonly>
         </div>
         <div>
             <label for="itemName">상품명</label>
@@ -44,8 +44,8 @@
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='itemList.html'"
-                        th:onclick="|location.href='@{/chanMarket/itemList/{itemId}(itemId=${item.id})}'|"
+                        onclick="location.href='boardList.html'"
+                        th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${item.board.id})}'|"
                         type="button">취소</button>
             </div>
         </div>
