--- a/src/main/resources/templates/basket/addForm.html
+++ b/src/main/resources/templates/basket/addForm.html
@@ -14,11 +14,11 @@
         <h2>상품 상세</h2>
     </div>
     <!-- 추가 -->
-    <form th:action="@{'/chanMarket/itemList/' + ${item.id} + '/itemBasket'}" th:method="post">
+    <form th:action="@{'/chanMarket/basket/' + ${item.id} + '/add'}" th:method="post">
         <div>
             <label for="email">판매자</label>
             <input type="text" id="email" name="email" class="form-control"
-                   value="1" th:value="${item.member.getEmail()}" readonly>
+                   value="1" th:value="${member.email}" readonly>
         </div>
         <div>
             <label for="itemName">상품명</label>
@@ -47,7 +47,7 @@
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
                             onclick="location.href='itemList.html'"
-                            th:onclick="|location.href='@{/chanMarket/itemList/{itemId}(itemId=${item.id})}'|"
+                            th:onclick="|location.href='@{/chanMarket/board/{boardId}(boardId=${item.board.id})}'|"
                             type="button">취소</button>
                 </div>
 
