--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -12,7 +12,7 @@
         <div class="col">
             <button class="btn btn-primary float-end"
                     onclick="location.href='addForm.html'"
-                    th:onclick="|location.href='@{/chanMarket/itemList/add}'|"
+                    th:onclick="|location.href='@{/chanMarket/item/add}'|"
                     type="button">상품 등록</button>
         </div>
     </div>
