--- a/src/main/resources/templates/item/addForm.html
+++ b/src/main/resources/templates/item/addForm.html
@@ -16,7 +16,7 @@
         <h2>상품 등록 폼</h2>
     </div>
     <h4 class="mb-3">상품 입력</h4>
-    <form th:action="@{'/chanMarket/itemList'}" th:method="post">
+    <form th:action="@{'/chanMarket/item'}" th:method="post">
         <div>
             <label>등록한 이메일</label>
             <input type="text" id="email" name="email" th:value="${email}" class="form-control"
@@ -48,7 +48,7 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='itemList.html'"
-                        th:onclick="|location.href='@{/chanMarket/itemList}'|"
+                        th:onclick="|location.href='@{/chanMarket/board}'|"
                         type="button">취소</button>
             </div>
         </div>
