--- a/src/main/resources/templates/basket/myBasket.html
+++ b/src/main/resources/templates/basket/myBasket.html
@@ -22,6 +22,14 @@
         </tr>
         </tbody>
     </table>
+
+    <div class="col">
+        <button class="w-100 btn btn-secondary btn-lg"
+                onclick="location.href='myInfo.html'"
+                th:onclick="|location.href='@{/chanMarket/myInfo}'|"
+                type="button">뒤로가기</button>
+    </div>
+
 </form>
 
 </body>
