--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -27,6 +27,13 @@
     </div>
 </div>
 
+<form th:action="@{'/chanMarket/board'}" th:method="post">
+    <div class="col">
+        <button class="w-100 btn btn-primary btn-lg" type="submit" value="Update">로그아웃
+        </button>
+    </div>
+</form>
+
 <form th:action="@{'/chanMarket/board'}" th:method="get">
     <hr class="my-4">
     <div>
