--- a/src/main/resources/templates/chat/chatError.html
+++ b/src/main/resources/templates/chat/chatError.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+자기 자신에게는 채팅할 수 없습니다
 </body>
 </html>
