--- a/src/main/resources/templates/member/myInfo.html
+++ b/src/main/resources/templates/member/myInfo.html
@@ -62,6 +62,11 @@
                         th:onclick="|location.href='@{/chanMarket/basket/{basketId}(basketId=${myInfo.basket.id})}'|" type="button">찜목록 보기</button>
             </div>
             <div class="col">
+                <button class="w-100 btn btn-primary btn-lg"
+                        onclick="location.href='../chat/chatRoomList.html'"
+                        th:onclick="|location.href='@{/chanMarket/chat/{memberId}/ChatList(memberId=${myInfo.id})}'|" type="button">채팅방 보기</button>
+            </div>
+            <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='boardList.html'"
                         th:onclick="|location.href='@{/chanMarket/board}'|"
