--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -30,11 +30,21 @@
                     th:text="${myChat.owner.email}">
                 </td>
                 <td><button th:onClick="|location.href='@{/chanMarket/chat/{roomId}(roomId=${myChat.id})}'|" type="button">채팅하기</button></td>
+
+                <td> <button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteChatRoom(' + ${myChat.id} ','+ ${memberId} + ')'">나가기</a></button></td>
             </tr>
             </tbody>
         </table>
     </div>
+    <br>
+    <a href="javascript:window.history.back();">뒤로가기</a>
 </form>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../../market/js/chatDel.js"> </script>
 
 </body>
 </html>
