--- a/src/main/resources/templates/basket/error.html
+++ b/src/main/resources/templates/basket/error.html
@@ -5,8 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-이미 채팅중인 물건입니다
+자신의 물건은 찜할 수 없습니다
 <br>
 <a href="javascript:window.history.back();">뒤로가기</a>
+
+
 </body>
 </html>
