--- a/src/main/resources/templates/basket/myBasket.html
+++ b/src/main/resources/templates/basket/myBasket.html
@@ -19,6 +19,8 @@
         <tr th:each="basketItem: ${list}">
             <td><a th:href="@{|/chanMarket/board/${basketItem.getItem().getBoard().id}|}" th:text="${basketItem.getItem().itemName}"></a></td>
             <td th:text="${basketItem.getItem().getPrice()}"></td>
+
+            <td><button><a href="javascript:void(0);" class="btn btn-danger" th:onclick="'deleteBasketItem(' + ${basketItem.basket.id} +','+ ${basketItem.id} + ')'">삭제</a></button></td>
         </tr>
         </tbody>
     </table>
@@ -32,5 +34,7 @@
 
 </form>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="../../market/js/baskItemDel.js"> </script>
 </body>
 </html>
