--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
 </head>
 <body>
-채팅방에 입장하셨습니다.
+채팅방에 입장하셨습니다.<br>
+채팅인원 : <td th:text="${chatRoom.owner.email}"></td>, <td th:text="${chatRoom.member.email}"></td>
 
-<form>
-    <div class="card">
-        <tr th:each="messages : ${chatRoom.getMessage()}">
-            <div class="card-header">
-                <td th:text="${messages.text}"></td>
-                <td th:text="${messages.nowTime}"></td>
+
+    <div class="container">
+        <div class="col-6">
+            <label><b>채팅창</b></label>
+        </div>
+        <div>
+            <div id="msgArea" class="col">
+
             </div>
-        </tr>
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <input type="text" id="msg" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="button-send">전송</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+        </div>
     </div>
-</form>
 
 </body>
 </html>
